--- a/daniel-wallen/index.html
+++ b/daniel-wallen/index.html
@@ -73,4 +73,8 @@
     </div>
   </section>
 
+  <section class="footer">
+    <p>&copy;2019 Friend Finder Inc. / My New BFF</p>
+  </section>
+
   </body>
