--- a/daniel-wallen/about.html
+++ b/daniel-wallen/about.html
@@ -31,45 +31,45 @@
   </section>
 
   <div class="feature-img">
-  <img src="img/marketing-image-1.jpg" alt="two women laughing while having a glass of beer"/>
+  <img src="img/about-photo-0.jpg" alt="three women laughing while having a glass of beer"/>
   </div>
 
   <section class="middle" id="middle">
 
     <div class="card">
       <div class="card-text">
-        <h2>Fast</h2>
-        <p>Create an account in ten seconds flat. Next, you'll be free to explore potential friends in your hometown. Our intelligent algorithm matches you with people who already share your hobbies and interests.</p>
+        <h2>Step 1</h2>
+        <p>Create an account with a unique username and password. You'll be directed to a page where you can select a        profile photo and tell us about some of your favorite hobbies and interests.</p>
       </div>
       <div class="card-img">
-        <img src="img/marketing-image-2.jpg" alt="Women high-fiving and laughing together"/>
+        <img src="img/about-photo-1.jpg" alt="Women texting (or perhaps signing up for our app) with her red cellphone"/>
       </div>
     </div>
 
     <div class="card">
       <div class="card-text">
-        <h2>Efficient</h2>
-        <p>We'll notify you of movies, concerts, and sporting events of interest. Even better, we'll match you with new friends who'd enjoy the exact same events. Now you don't have to fly solo!</p>
+        <h2>Step 2</h2>
+        <p>Scroll through people who are seeking friendships in your hometown. If you like the sound of them, click "Connect" to start a conversation. If you're not interested, click "move on" and find a better fit.</p> 
       </div>
       <div class="card-img">
-        <img src="img/marketing-image-3.jpg" alt="Men sitting down for a rest on a scenic mountainview stop during a hike"/>
+        <img src="img/about-photo-2.jpg" alt="Two sharply dressed women shaking hands after meeting each other"/>
       </div>
     </div>
 
     <div class="card">
       <div class="card-text">
-        <h2>Friendly</h2>
-        <p>No idea what to say? No problem. When you match with a new friend, we suggest an ice-breaker to get you started. This takes all the pressure out of meeting new people.</p>
+        <h2>Step 3</h2>
+        <p>After you discover a mutual interest, make plans to meet your new BFF. Since it never hurts to be safe, we suggest exchanging photos and having a phone conversation before your meet-up. And don't forget to have fun!</p> 
       </div>
       <div class="card-img">
-        <img src="img/marketing-image-4.jpg" alt="Man and woman smiling and taking a selfie on a beautiful day outside"/>
+        <img src="img/about-photo-3.jpg" alt="Four women sharing a group hug on a scenic mountain hiking trail"/>
       </div>
     </div>
   </section>
 
   <section class="bottom" id="bottom">
     <div class="cta">
-      <btn>Why Wait? Create Your Free Account Today!</btn>
+      <btn>Are You Ready? Let's Make Friends!</btn>
     </div>
   </section>
 
