Not perfect, but less obvious they aren't 100% centered from the perspective of 70-90% zoom on my laptop. Hopefully that'll apply to your devices as well since I only have a phone and laptop to look at it with.

--- a/daniel-wallen/about.html
+++ b/daniel-wallen/about.html
@@ -23,7 +23,7 @@
     </div>
     <div class="nav-menu">
       <nav>
-        <a href="#top">Home</a>
+        <a href="index.html">Home</a>
         <a href="#middle">About</a>
         <a href="#bottom">Find Friends</a>
       </nav>
