--- a/daniel-wallen/index.html
+++ b/daniel-wallen/index.html
@@ -24,7 +24,7 @@
     <div class="nav-menu">
       <nav>
         <a href="#top">Home</a>
-        <a href="#middle">About</a>
+        <a href="about.html">About</a>
         <a href="#bottom">Find Friends</a>
       </nav>
     </div>
