Added animation to header images (they fade in now).

--- a/daniel-wallen/about.html
+++ b/daniel-wallen/about.html
@@ -49,7 +49,7 @@
     <div class="card">
       <div class="card-text">
         <h2>Step 2</h2>
-        <p>Scroll through people who are seeking friendships in your hometown. If you like the sound of them, click "Connect" to start a conversation. If you're not interested, click "move on" and find a better fit.</p> 
+        <p>Scroll through people who are seeking friendships in your hometown. If you like the sound of them, click "Connect" to start a conversation. If you're not interested, click "Move On" and find a better fit.</p> 
       </div>
       <div class="card-img">
         <img src="img/about-photo-2.jpg" alt="Two sharply dressed women shaking hands after meeting each other"/>
@@ -59,7 +59,7 @@
     <div class="card">
       <div class="card-text">
         <h2>Step 3</h2>
-        <p>After you discover a mutual interest, make plans to meet your new BFF. Since it never hurts to be safe, we suggest exchanging photos and having a phone conversation before your meet-up. And don't forget to have fun!</p> 
+        <p>After you discover a mutual interest, make plans to meet your new BFF. Since it never hurts to be safe, we suggest exchanging photos and having a phone conversation before your meet-up.</p> 
       </div>
       <div class="card-img">
         <img src="img/about-photo-3.jpg" alt="Four women sharing a group hug on a scenic mountain hiking trail"/>
