Added sign-up link to button

--- a/daniel-wallen/index.html
+++ b/daniel-wallen/index.html
@@ -69,7 +69,7 @@
 
   <section class="bottom" id="bottom">
     <div class="cta">
-      <btn>Why Wait? Create Your Free Account Today!</btn>
+      <btn><a href="https://5d43a587180038840d0e08d5--awesome-wiles-3ccf9f.netlify.com">Why Wait? Create Your Free Account Today!</btn></a>
     </div>
   </section>
 
