--- a/daniel-wallen/about.html
+++ b/daniel-wallen/about.html
@@ -69,7 +69,7 @@
 
   <section class="bottom" id="bottom">
     <div class="cta">
-      <btn>Are You Ready? Let's Make Friends!</btn>
+      <btn><a href="https://5d43a587180038840d0e08d5--awesome-wiles-3ccf9f.netlify.com">Are You Ready? Let's Make Friends!</a></btn>
     </div>
   </section>
 
