Slight touch-ups months after the fact for a more responsive and user friendly flow.

--- a/daniel-wallen/index.html
+++ b/daniel-wallen/index.html
@@ -69,7 +69,8 @@
 
   <section class="bottom" id="bottom">
     <div class="cta">
-      <btn><a href="https://5d43a587180038840d0e08d5--awesome-wiles-3ccf9f.netlify.com">Why Wait? Create Your Free Account Today!</btn></a>
+      <strong><h3>Why Wait...?</h3></strong>
+      <btn><a href="./about.html">Create Your Free Account!</a></btn>
     </div>
   </section>
 
