--- a/daniel-wallen/about.html
+++ b/daniel-wallen/about.html
@@ -69,7 +69,8 @@
 
   <section class="bottom" id="bottom">
     <div class="cta">
-      <btn><a href="https://5d43a587180038840d0e08d5--awesome-wiles-3ccf9f.netlify.com">Are You Ready? Let's Make Friends!</a></btn>
+      <strong><h3>Are You Ready...?</h3></strong>
+      <btn><a href="./index.html">Let's Make Friends!</a></btn>
     </div>
   </section>
 
